added import url in css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=David+Libre&family=Kalam&family=Major+Mono+Display&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=David+Libre&family=Major+Mono+Display&display=swap');
 
 body {
   box-sizing: 0;
