--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ textarea {
 
 /* Send Message -  Button CSS Effect */
 .button-24 {
-  background: #ff4742;
-  border: 1px solid #ff4742;
+  background: #519872;
+  border: 1px solid #519872;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
   box-sizing: border-box;
@@ -145,7 +145,7 @@ textarea {
 .button-24:active {
   background-color: initial;
   background-position: 0 0;
-  color: #ff4742;
+  color: #519872;
 }
 
 .button-24:active {
