--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ textarea {
   color: whitesmoke;
 }
 
-/* Send Message -  Button CSS Effect */
+/* Send Message -  Button Effect */
 .button-24 {
   background: #519872;
   border: 1px solid #519872;
